deploy/k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: brabo
spec:
  selector:
    app.kubernetes.io/name: api
  ports:
    - name: http
      port: 3000
      targetPort: http
